--- a/pawng.html
+++ b/pawng.html
@@ -5,6 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
     <title>pawNG</title>
 </head>
 
@@ -13,8 +14,13 @@
     <div class="container p-5 d-flex flex-column align-items-center">
         <h5><u>pawNG</u></h5>
         <div class="oldWindow d-flex flex-column text-center">
-            <div class="topBar d-flex flex-column">
-                <button class="cornerButton align-self-end m-1 d-flex align-items-center justify-content-center">x</button>
+            <div class="topBar d-flex justify-content-between align-items-center">
+                <span class="leftBarText">pawNG</span>
+                <div class="d-flex">
+                    <button id="pauseButton" class="minButton d-flex m-1 align-items-center justify-content-center">&#95;</button>
+                    <button id="playButton" class="maxButton d-flex m-1 align-items-center justify-content-center">&square;</button>
+                    <button id="resetButton" class="xButton d-flex m-1 align-items-center justify-content-center">x</button>
+                </div>
             </div>
             <canvas id="myCanvas" width="600" height="300"></canvas>
         </div>
