--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <div class="container p-4 d-flex justify-content-left">
+    <div class="container scroll-container p-4 d-flex flex-column flex-md-row justify-content-left">
 
         <div class="d-flex flex-column">
             <!--Start AboutMEow window/link code-->
@@ -27,13 +27,13 @@
                             <div class="align-items-right">
                                 <!--x Button on the About Box Window-->
                                 <button id="xAboutButton"
-                                    class="xAboutButton d-flex align-items-center justify-content-center">x</button>
+                                    class="xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
                         <p class="window-bodyText">As a human-model, I have extensive life experience. Learn more?</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
-                        <button id="aboutButton" class="aboutButton" onclick="navLink('about.html')">OK</button>
+                        <button id="aboutButton" class="okButton" onclick="navLink('about.html')">OK</button>
                     </div>
                 </div>
             </div>
@@ -50,7 +50,7 @@
                             <div class="align-items-right">
                                 <!--X Button on pawNG Box Window-->
                                 <button id="xpawNGButton"
-                                    class="xpawNGButton d-flex align-items-center justify-content-center">x</button>
+                                    class="xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
                         <p class="window-bodyText"> <b>pawNG</b> is a simple game with unnecessary possibilities. Want
@@ -58,7 +58,7 @@
                             play?</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
-                        <button id="pawNGButton" class="pawNGButton" onclick="navLink('pawNG.html')">OK</button>
+                        <button id="pawNGButton" class="okButton" onclick="navLink('pawNG.html')">OK</button>
                     </div>
                 </div>
             </div>
@@ -75,13 +75,13 @@
                             <div class="align-items-right">
                                 <!--x Button on the Portfolio Box Window-->
                                 <button id="xPortfolioButton"
-                                    class="xPortfolioButton d-flex align-items-center justify-content-center">x</button>
+                                    class="xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
                         <p class="window-bodyText">I am a professional and accordindly I have <s>proof</s> a portfolio. I'd be happy to show you...</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
-                        <button id="portfolioButton" class="portfolioButton" onclick="navLink('portfolio.html')">OK</button>
+                        <button id="portfolioButton" class="okButton" onclick="navLink('portfolio.html')">OK</button>
                     </div>
                 </div>
             </div>
@@ -101,16 +101,16 @@
 
                             <!--Click Min Button-->
                             <button id="minWelcomeButton"
-                                class="minWelcomeButton d-flex my-0 mx-0 align-items-center justify-content-center">&#95;</button>
+                                class="minButton d-flex my-0 mx-0 align-items-center justify-content-center">&#95;</button>
                                 <!--HELLO KAYLA PLEASE PAY ATTENTION TO THIS Change class of button for x, min and max to all be the same-->
 
                             <!--Click Max Button-->
                             <button id="maxWelcomeButton"
-                                class="maxWelcomeButton d-flex m-1 my-0 align-items-center justify-content-center">&square;</button>
+                                class="maxButton d-flex m-1 my-0 align-items-center justify-content-center">&square;</button>
 
                             <!--Click Close Button-->
                             <button id="xWelcomeButton"
-                                class="xWelcomeButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
+                                class="xButton d-flex my-0 mx-0 align-items-center justify-content-center">x</button>
 
 
                         </div>
