--- a/pawng.html
+++ b/pawng.html
@@ -6,7 +6,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>pawNG</title>
+    <title>kafka.dev/pawNG</title>
 </head>
 
 <body>
