--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <!--Popup for xpawNG-->
-                    <div class="popup close-popup" id="xpawNGPopup" data-popup-id="xpawNGPopup">
+                    <div class="popup close-popup" id="xpawNGPopup" data-popup-id="xpawNGPopup>
                         <div class="popup-content">
                             <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">kafka.dev/pawNG/alter
                             <button data-popup-id="xpawNGPopup" class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center" id="closexpawNGPopupButton">&times;</button>
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <!--Pop-up for xWelcome-->
-                    <div class="popup close-popup" id="xWelcomePopup" data-popup-id="xWelcomePopup">
+                    <div class="popup close-popup" id="xWelcomePopup" data-popup-id="xWelcomePopup>
                         <div class="popup-content">
                             <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">kafka.dev/welcome/alert
                             <button data-popup-id="xWelcomePopup" class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center" id="closexWelcomePopupButton">&times;</button>
@@ -153,7 +153,7 @@
                         </div>
                     </div>
                      <!--Pop-up for minWelcome-->
-                     <div class="popup close-popup" id="minWelcomePopup" data-popup-id="minWelcomePopup">
+                     <div class="popup close-popup" id="minWelcomePopup" data-popup-id="minWelcomePopup>
                         <div class="popup-content">
                             <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">kafka.dev/welcome/alert
                             <button data-popup-id="minWelcomePopup" class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center" id="closeminWelcomePopupButton">&times;</button>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                        <!--Pop-up for maxWelcome-->
-                       <div class="popup close-popup" id="maxWelcomePopup" data-popup-id="maxWelcomePopup">
+                       <div class="popup close-popup" id="maxWelcomePopup" data-popup-id="maxWelcomePopup>
                         <div class="popup-content">
                             <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">kafka.dev/welcome/alert
                             <button data-popup-id="maxWelcomePopup" class="close close-popup  d-flex m-0 my-0 align-items-center justify-content-center" id="closemaxWelcomePopupButton">&times;</button>
