--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
 
                             <!--x Button on the Portfolio Box Window-->
                             <button id="xPortfolioButton2"
-                                class="xPortfolioButton2 d-flex align-items-center justify-content-center"
+                                class="xButton d-flex align-items-center justify-content-center"
                                 onclick="navLink('index.html')">x</button>
                     </h5>
                     <div class="d-flex pt-3 align-items-center justify-content-center">
