--- a/jsminiprojects.html
+++ b/jsminiprojects.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <script src="simplejs.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kafka.dev/simplejs</title>
+    <title>kafka.dev/jsminiprojects</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 
-<body>
+<body class="scroll-container clouds-background">
     <div class="container p-5 d-flex flex-column align-items-center">
-        <h5><u>Simple JS Projects</u></h5>
+        <h5><u>js mini projects</u></h5>
         <p class="custom-paragraph">test projects</p>
-        <div class="card" style="width: 18rem;">
+        <!-- <div class="card" style="width: 18rem;">
             <div class="card-body">
                 <h5 class="card-title text-center">An <i>Impressive</i> Box</h5>
                 <p class="card-text">Inserting this box was an incredible feat of software engineering.</p>
                 <a href="index.html" class="btn btn-primary ">Cowboy, Take me Away(Home)</a>
             </div>
-        </div>
+        </div> -->
     </div>
 </body>
 
